# cici

./: .bash_history  .viminfo  CMakeLists.txt  class  class.cpp  cpp  cpp.cpp  derived  derived.cpp  math  math.cpp  mongodb.cpp  snake.c  sys  sys.cpp  sys1.cpp  test.cpp  yao.cpp
.vim/: .netrwhist
async-start/: .appComponent.hpp.swp  app.cpp  appComponent.hpp  dtos.hpp  myController.cpp  myController.hpp
mongo-c-driver-1.6.3/: Makefile  aggregation1  bulk-collation  bulk1  bulk2  bulk3  bulk4  bulk5  bulk6  config.status  example-client  example-command-monitoring  example-command-with-opts  example-gridfs  example-matcher  example-pool  example-scram  example-sdam-monitoring  fam  filter-bsondump  find-and-modify  libmongoc-1.0.la  libmongoc-priv.la  libtool  mongoc-dump  mongoc-ping  mongoc-stat  mongoc-tail  test-libmongoc  test-load  test-replica-set  test-replica-set-ssl  test-secondary  test-sharded-cluster
mongo-c-driver-1.6.3/.libs/: aggregation1  bulk-collation  bulk1  bulk2  bulk3  bulk4  bulk5  bulk6  example-client  example-command-monitoring  example-command-with-opts  example-gridfs  example-matcher  example-pool  example-scram  example-sdam-monitoring  fam  filter-bsondump  find-and-modify  libmongoc-1.0.so.0.0.0  libmongoc-1.0.so.0.0.0T  mongoc-dump  (+9 more)
mysqlcpp/: .mysqlc.c.swo  .mysqlc.c.swp  .studymysql.cpp.swl  .studymysql.cpp.swm  .studymysql.cpp.swn  .studymysql.cpp.swo  .studymysql.hpp.swp  .sys.cpp.swp  a  mmysqlc.c  mysqlc.c  mysqlc.h  mysqlcpptest.cpp  studymysql.cpp  studymysql.hpp  sys.cpp  test1.cpp
orm/: friendDB.hpp  friendDto.hpp
(+316 files in other folders)
